--- a/CQWM/sky-take-out/sky-server/pom.xml
+++ b/CQWM/sky-take-out/sky-server/pom.xml
@@ -28,6 +28,19 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
+
+
+
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.2</version>
+        </dependency>
+
+
+
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
