--- a/CQWM/sky-take-out/sky-server/${project.build.directory}/classes/application-dev.yml
+++ b/CQWM/sky-take-out/sky-server/${project.build.directory}/classes/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: 123456
+  alioss:
+    endpoint: oss-cn-beijing.aliyuncs.com
+    access-key-id: LTAI5tRCihJV2fcjx9Y8hZLT
+    access-key-secret: 3cpdXbLlFfGSLtgMY4sXzOKdGSVS4T
+    bucket-name: mjy-djx
