--- a/CQWM/sky-take-out/sky-server/src/main/resources/application-dev.yml
+++ b/CQWM/sky-take-out/sky-server/src/main/resources/application-dev.yml
@@ -11,3 +11,8 @@ sky:
     access-key-id: LTAI5tRCihJV2fcjx9Y8hZLT
     access-key-secret: 3cpdXbLlFfGSLtgMY4sXzOKdGSVS4T
     bucket-name: mjy-djx
+  redis:
+      host: localhost
+      port: 6379
+      password: 123456
+      database: 10
