商品浏览业务功能业务代码开发

--- a/CQWM/sky-take-out/sky-server/${project.build.directory}/classes/application-dev.yml
+++ b/CQWM/sky-take-out/sky-server/${project.build.directory}/classes/application-dev.yml
@@ -16,3 +16,6 @@ sky:
       port: 6379
       password: 123456
       database: 10
+  wechat:
+      appid: wxaf44bdd2846c4451
+      secret: c674064c53648c4fdb6c40a273625815
