--- a/CQWM/sky-take-out/sky-server/${project.build.directory}/classes/application-dev.yml
+++ b/CQWM/sky-take-out/sky-server/${project.build.directory}/classes/application-dev.yml
@@ -27,4 +27,8 @@ sky:
 #      weChatPayCertFilePath: D:\wechatpay_166D96F876F45C7D07CE98952A96EC980368ACFC.pem
       notifyUrl: https://4bbf1e98.r26.cpolar.top/notify/paySuccess
       refundNotifyUrl: https://4bbf1e98.r26.cpolar.top/notify/refundSuccess
+  shop:
+      address: 北京市海淀区上地十街10号
+  baidu:
+      ak: GxIvTv8wVWtp3MX2I2EEzfJeKvIHDoMx
 
