--- a/CQWM/sky-take-out/sky-server/src/main/resources/application.yml
+++ b/CQWM/sky-take-out/sky-server/src/main/resources/application.yml
@@ -61,5 +61,9 @@ sky:
 #    weChatPayCertFilePath: ${sky.wechat.weChatPayCertFilePath}
     notifyUrl: ${sky.wechat.notifyUrl}
     refundNotifyUrl: ${sky.wechat.refundNotifyUrl}
+  shop:
+    address: 北京市海淀区上地十街10号
+  baidu:
+    ak: GxIvTv8wVWtp3MX2I2EEzfJeKvIHDoMx
 
 
