--- a/CQWM/sky-take-out/sky-server/${project.build.directory}/classes/application.yml
+++ b/CQWM/sky-take-out/sky-server/${project.build.directory}/classes/application.yml
@@ -62,8 +62,8 @@ sky:
     notifyUrl: ${sky.wechat.notifyUrl}
     refundNotifyUrl: ${sky.wechat.refundNotifyUrl}
   shop:
-    address: 北京市海淀区上地十街10号
+    address: ${sky.shop.address}
   baidu:
-    ak: GxIvTv8wVWtp3MX2I2EEzfJeKvIHDoMx
+    ak: ${sky.baidu.ak}
 
 
