--- a/CQWM/sky-take-out/sky-server/src/main/resources/application-dev.yml
+++ b/CQWM/sky-take-out/sky-server/src/main/resources/application-dev.yml
@@ -7,10 +7,10 @@ sky:
     username: root
     password: 123456
   alioss:
-    endpoint: oss-cn-beijing.aliyuncs.com
-    access-key-id: LTAI5tRCihJV2fcjx9Y8hZLT
-    access-key-secret: 3cpdXbLlFfGSLtgMY4sXzOKdGSVS4T
-    bucket-name: mjy-djx
+    endpoint:
+    access-key-id:
+    access-key-secret:
+    bucket-name:
   redis:
       host: localhost
       port: 6379
